--- a/composer.json
+++ b/composer.json
@@ -16,11 +16,11 @@
         "guzzlehttp/guzzle": "^6.3",
         "laravel/dusk": "^5.9",
         "laravel/framework": "^7.0",
+        "laravel/passport": "^8.4",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
-        "yajra/laravel-datatables-oracle": "^9.9",
         "spatie/laravel-medialibrary": "^7.19",
-        "laravel/passport": "^8.4"
+        "yajra/laravel-datatables-oracle": "^9.9"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
